[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/background3.png" type="Texture" id=1]
[ext_resource path="res://World2Controller.gd" type="Script" id=2]
[ext_resource path="res://MoveChildrenCircle.gd" type="Script" id=3]
[ext_resource path="res://MoveChildrenVert.gd" type="Script" id=4]
[ext_resource path="res://Assets/Prefabs/Peg.tscn" type="PackedScene" id=5]

[node name="Pegs" type="Node2D"]
script = ExtResource( 2 )

[node name="Crow1" type="Node2D" parent="."]
position = Vector2( 82, 154.878 )
script = ExtResource( 3 )

[node name="Center" type="Position2D" parent="Crow1"]
position = Vector2( 406, 141.122 )

[node name="RigidBody2D" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -64, -64 )

[node name="RigidBody2D5" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -64, 64 )

[node name="RigidBody2D2" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -96, -4 )

[node name="RigidBody2D3" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 0, 96 )

[node name="RigidBody2D4" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 60, 64 )

[node name="RigidBody2D6" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 96, 0 )

[node name="RigidBody2D7" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 60, -64 )

[node name="RigidBody2D8" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 0, -96 )

[node name="RigidBody2D9" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 128, 64 )

[node name="RigidBody2D10" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 128, -64 )

[node name="RigidBody2D11" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 64, -128 )

[node name="RigidBody2D12" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -64, -128 )

[node name="RigidBody2D13" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -128, -64 )

[node name="RigidBody2D14" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 0, -160 )

[node name="RigidBody2D15" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -128, 64 )

[node name="RigidBody2D16" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -160, 0 )

[node name="RigidBody2D17" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="RigidBody2D18" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 64, 128 )

[node name="RigidBody2D20" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( 0, 160 )

[node name="RigidBody2D19" parent="Crow1/Center" instance=ExtResource( 5 )]
position = Vector2( -64, 128 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 493, 293 )
z_index = -1
texture = ExtResource( 1 )

[node name="Vrow1" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="RigidBody2D" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 64 )

[node name="RigidBody2D2" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 128 )

[node name="RigidBody2D3" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 192 )

[node name="RigidBody2D4" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 256 )

[node name="RigidBody2D5" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 320 )

[node name="RigidBody2D6" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 384 )

[node name="RigidBody2D7" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 448 )

[node name="RigidBody2D8" parent="Vrow1" instance=ExtResource( 5 )]
position = Vector2( 64, 512 )

[node name="Top" type="Position2D" parent="Vrow1"]
position = Vector2( 64, 8 )

[node name="Bot" type="Position2D" parent="Vrow1"]
position = Vector2( 64, 528 )

[node name="Vrow3" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="RigidBody2D" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 66 )

[node name="RigidBody2D2" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 130 )

[node name="RigidBody2D3" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 194 )

[node name="RigidBody2D4" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 258 )

[node name="RigidBody2D5" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 322 )

[node name="RigidBody2D6" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 386 )

[node name="RigidBody2D7" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 450 )

[node name="RigidBody2D8" parent="Vrow3" instance=ExtResource( 5 )]
position = Vector2( 898, 514 )

[node name="Top" type="Position2D" parent="Vrow3"]
position = Vector2( 898, 10 )

[node name="Bot" type="Position2D" parent="Vrow3"]
position = Vector2( 898, 530 )

[node name="Vrow2" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="RigidBody2D" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 98 )

[node name="RigidBody2D2" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 162 )

[node name="RigidBody2D3" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 226 )

[node name="RigidBody2D4" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 290 )

[node name="RigidBody2D5" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 354 )

[node name="RigidBody2D6" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 418 )

[node name="RigidBody2D7" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 130, 482 )

[node name="RigidBody2D8" parent="Vrow2" instance=ExtResource( 5 )]
position = Vector2( 128, 32 )

[node name="Top" type="Position2D" parent="Vrow2"]
position = Vector2( 130, 8 )

[node name="Bot" type="Position2D" parent="Vrow2"]
position = Vector2( 128, 514 )

[node name="Vrow4" type="Node2D" parent="."]
position = Vector2( 0, -8 )
script = ExtResource( 4 )

[node name="RigidBody2D" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 100 )

[node name="RigidBody2D2" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 164 )

[node name="RigidBody2D3" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 228 )

[node name="RigidBody2D4" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 292 )

[node name="RigidBody2D5" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 356 )

[node name="RigidBody2D6" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 420 )

[node name="RigidBody2D7" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 834, 484 )

[node name="RigidBody2D8" parent="Vrow4" instance=ExtResource( 5 )]
position = Vector2( 832, 34 )

[node name="Top" type="Position2D" parent="Vrow4"]
position = Vector2( 834, 10 )

[node name="Bot" type="Position2D" parent="Vrow4"]
position = Vector2( 834, 530 )

[node name="StaticPegs" type="Node2D" parent="."]

[node name="RigidBody2D" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 192, 66 )

[node name="RigidBody2D2" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 256, 128 )

[node name="RigidBody2D3" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 320, 66 )

[node name="RigidBody2D4" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 256, 194 )

[node name="RigidBody2D5" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 192, 258 )

[node name="RigidBody2D6" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 256, 322 )

[node name="RigidBody2D7" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 256, 386 )

[node name="RigidBody2D8" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 192, 448 )

[node name="RigidBody2D9" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 256, 512 )

[node name="RigidBody2D10" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 640, 66 )

[node name="RigidBody2D11" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 704, 128 )

[node name="RigidBody2D12" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 768, 66 )

[node name="RigidBody2D13" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 704, 194 )

[node name="RigidBody2D14" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 768, 258 )

[node name="RigidBody2D15" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 704, 322 )

[node name="RigidBody2D16" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 768, 384 )

[node name="RigidBody2D17" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 704, 448 )

[node name="RigidBody2D18" parent="StaticPegs" instance=ExtResource( 5 )]
position = Vector2( 768, 512 )
